<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.friday.ModifyActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:textSize="25sp"
        android:text="Enter the Name to Modify" />


    <EditText
        android:id="@+id/text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:gravity="center_vertical"
        android:hint="@string/old_name"
        android:inputType="textCapCharacters"
        android:maxLines="1"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/text_name_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:gravity="center_vertical"
        android:hint="@string/new_name"
        android:inputType="textCapCharacters"
        android:maxLines="1"
        android:textAlignment="center" />


    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="82dp"
        android:layout_marginStart="49dp"
        android:text="@string/submit"
        android:onClick="update"/>

    <Button
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_submit"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="46dp"
        android:text="@string/clear"
        android:onClick="clear_data"/>


</RelativeLayout>
